Reduce per-request allocations in hot paths for lower GC pressure
- Replace stream().anyMatch() with for-loop in DslJsonHttpMessageConverter
- Guard unguarded log.debug() in DagExecutor.executeNode()
- Extract opName string concat and HttpMethod.valueOf() outside retry lambdas in RestServiceClient
- Replace toLowerCase() + Set.contains() with equalsIgnoreCase loop for hop-by-hop header filtering in LoomHandlerAdapter
- Simplify toMultiValueMap() triple allocation (LinkedHashMap → List.copyOf → Map.copyOf) to single unmodifiable wrapper

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>